--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="heading">
-<img src="logo.jpg" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
+<img src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
 <h1>Green Bananas</h1>
 </div>
 <div id="hotbar">
