--- a/overview.html
+++ b/overview.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" name="style" href="style.css" />
+	<link rel="stylesheet" type="text/css" name="style" href="style.css" />
 </head>
 <body>
 <div id="heading">
@@ -8,15 +8,16 @@
 <h1>Green Bananas</h1>
 </div>
 <div id="hotbar">
-<a href="test.html">
+<a href="index.html">
 	<img src="homeimg.png" style="width:42px;height:42px;border:0px">
 </a>
-<a href="test.html" style="padding: .5cm">Homepage</a>
+<a href="index.html" style="padding: .5cm">Homepage</a>
 <a href="overview.html" style="padding: .5cm">Overview</a>
 <a href="ratings.html" style="padding: .5cm">Ratings</a>
 <a href="about.html" style="padding: .5cm">About</a>
 Control Panel Filler.
 </div>
+
 <div id="link" style="float:up">
 <a href="https://www.wm.com/index.jsp">Waste Management</a>
 <p>
