--- a/trashsystem.html
+++ b/trashsystem.html
@@ -39,8 +39,46 @@ Multiple-stream recycling is also used, but it tends to be more complicated due 
 A recycling facility, a waste-to-energy facility, or a land fill. The recycling facility is the biggest chain, and the one we'll talk about first.
 </p>
 <h3>Recycling Facility</h3>
-<p>In a recycling facility; most of them handle paper, plastic, and glass. Paper is sorted by corrugated (as in cardboard-like), newspapers, mixed paper (all of the common stuff), and an office mix (all kinds of paper used in a workplace).
+<p>In a recycling facility; most of them handle paper, plastic, and glass. We'll be covering them individually!
+</p>
+<h5>Paper</h5>
+Paper is sorted by corrugated (as in cardboard-like), newspapers, mixed paper (all of the common stuff), and an office mix (all kinds of paper used in a workplace).
 They get baled (dried so that water doesn't make them damp and soggy), and then shipped off to paper mills to be reused again.
 Newspapers are special due to the special ink that's on them, so they wash and rinse it in water until it looks plain with no more ink on it. This also coincidentally separates short-fiber newspapers from the long-fiber ones.
-At the mill, 
-
+They then take the recycled paper to the paper mill, where some mills can use all of the recycled paper. Others mix it with wood scraps if it has long fibers.
+All of this is then mixed and beat to a paste. Then it is poured into rollers, then drained. This causes it to become a wet sheet which is lifted and sent through heated rollers to harden it.
+It's then trimmed and rolled, and then the rolls are sent to printing plants, which is where the process starts once again!
+</p>
+<h5>Plastic</h5>
+<p>All plastic goes together in bins, but is sorted by type and color. It gets separated using blown air to move different weights of plastic to different places.
+Some facilities have good work policy which makes the plastic sorted by eye to separate the kind of plastic compounds (such as PET, HSPE, etc.,).
+Textile, plastic, bottle, carpet, and other industries use this raw plastic to make their own kind of product as well!
+Baled and recycled plastic are shipped off to plastic plants, which remanufacture it. Here's how:
+The plastics are ground and mashed into tiny scraps, which are washed to make them look clean. They're then melted, and put in molds (normally) to make small plastic pellets.
+These pellets are versatile, and can be used to make containers, bottles, paint, clothing, furniture, and all kind of plastic goods which you (the public) buy!
+</p>
+<h5>Glass</h5>
+<p>Repurposable glass is crushed to make cullet, tiny pieces of glass. It's then cleaned of debris and dirt/contamination to insure it's quality.
+Depending on the facility, it might be sorted out by color at the facility and then shipped in individual boxes, or they may just ship the whole thing.
+The shipping happens by loading it onto trucks, and then goes out to customers (including manufacturers.) They can include (most commonly), containers, road bedding, sandblasting, countertops, and a lot of other everyday glass prouducts.
+For the containers; the cullet is mixed with sand, soda ash, feldspar, and limestone. This all happens at a glass plant.
+That mixture is sent into a furnace; it's then melted at a scalding 1482 celsius!
+Using recycled glass like this reduces emissions and energy consumption, makes glass plant equipment last longer, and conserves materials. It then goes back in the loop!
+</p>
+<h5>Metal</h5>
+<p>First of all, magnets are used like air flow in the plastic plant. It separates steel/iron from the other metals. Steel is just sent to a storage area for baling.
+Aluminum is the main thing that remains, and is mechanically separated by an eddy current.
+An eddy current is a current induced in tiny swirls (eddies) on a large conductor (in our case, the aluminum.)
+If the aluminum moves through the magnetic field which goes perpindicularly to the sheet, it creates internal rings of magnetic current that oppose the movement.
+This effect makes it stop, as the movement of the sheet is slowed down due to the magnetic current.
+In our case, the eddy current pushes the aluminum up and away from the conveyer belt.
+Let's cover the steel mill first. External tin and the recycled steel are recovered through chemical and electrolysis baths.
+Electrolysis uses a direct electric current to force a chemical reaction that normally wouldn't happen.
+Then they're purified, melted, and cast into ingots. The steel is heated in huge vats and poured onto large sheets.
+The steel gets coated in tin, and then morphed into cans.
+Aluminum just gets melted and poured into ingot molds or rolled into sheets.
+The ingots are used to make new aluminum products. The sheets are made into cans, siding, storm window frames, and other products.
+So that's the end of two metal chains!
+</p>
+<h2>Waste & Trash Disposal</h2>
+<h3>Waste-to-Energy Facility</h3>
