--- a/trashsystem.html
+++ b/trashsystem.html
@@ -82,3 +82,6 @@ So that's the end of two metal chains!
 </p>
 <h2>Waste & Trash Disposal</h2>
 <h3>Waste-to-Energy Facility</h3>
+<p>In short, waste-to-energy is is when waste is turned into energy using high temperature combustion. This is, thankfully, fairly clean, renewable energy.
+The emissions are filtered using air quality filters.
+</p>
