--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="heading">
-<img src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
+<img class="logo" src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
 <h1>Green Bananas</h1>
 </div>
 <div id="hotbar">
@@ -57,7 +57,7 @@ Rotten Tomatoes: Critics: 8/10 "Well-directed, although the plotlines are little
 </p>
 </div>
 </div>
-<div id="column3" style="float:left; margin:0; width:18%; solid#000; background-color: "white";">
+<div id="column3" style="float:left; margin:0; width:15%; solid#000; background-color: white;">
 <p>ADSADS</p>
 <p>ADSADS</p>
 <p>ADSADS</p>
