control panel and css
freecodecamp is still my savior
also i added the control panel finally

--- a/overview.html
+++ b/overview.html
@@ -12,11 +12,12 @@
 	<img src="homeimg.png" style="width:42px;height:42px;border:0px">
 </a>
 <a href="index.html" style="padding: .5cm">Homepage</a>
-<a href="overview.html" style="padding: .5cm">Overview</a>
+<a href="overview.html" style="padding: .5cm">Education</a>
 <a href="ratings.html" style="padding: .5cm">Ratings</a>
 <a href="about.html" style="padding: .5cm">About</a>
-Control Panel Filler.
+<a href="controlpanel.html" style="padding: .5cm">Control Panel</a>
 </div>
+
 
 <div id="link" style="float:up">
 <a href="https://www.wm.com/index.jsp">Waste Management</a>
