--- a/controlpanel.html
+++ b/controlpanel.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" name="style" href="style.css" />
 <style>
 	.margincancel {
@@ -32,18 +33,18 @@
 <h3 class="margincancel">User Settings</h3>
 <form action="/name">
 	<input type="text" placeholder="Nickname">
-	<button type="button">Submit</button>
+	<button type="button" class="btn btn-primary">Submit</button>
 </form>
 <form action="/pw">
 	<input type="password" placeholder="Password">
-	<button type="button">Submit</button>
+	<button type="button" class="btn btn-primary">Submit</button>
 </form>
 <form action="/email">
 	<input type="email" placeholder="Email">
-	<button type="button">Submit</button>
+	<button type="button" class="btn btn-primary">Submit</button>
 </form>
 <form action="/phone">
 	<input type="tel" placeholder="Phone Number">
-	<button type="button">Submit</button>
+	<button type="button" class="btn btn-primary">Submit</button>
 </form>
 </div>
