--- a/overview.html
+++ b/overview.html
@@ -17,6 +17,26 @@
 <a href="about.html" style="padding: .5cm">About</a>
 <a href="controlpanel.html" style="padding: .5cm">Control Panel</a>
 </div>
+<html>
+<head>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" name="style" href="style.css" />
+</head>
+<body>
+<div id="heading">
+<img class="logo" src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
+<h1>Green Bananas</h1>
+</div>
+<div id="hotbar">
+<a href="index.html">
+	<img src="homeimg.png" style="width:42px;height:42px;border:0px">
+</a>
+<a href="index.html" style="padding: .5cm">Homepage</a>
+<a href="overview.html" style="padding: .5cm">Education</a>
+<a href="ratings.html" style="padding: .5cm">Ratings</a>
+<a href="about.html" style="padding: .5cm">About</a>
+<a href="controlpanel.html" style="padding: .5cm">Control Panel</a>
+</div>
 
 
 <div id="link" style="float:up">
