--- a/overview.html
+++ b/overview.html
@@ -21,6 +21,7 @@
 <head>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" name="style" href="style.css" />
+	<script src="jquery-1.11.3.min.js"></script>
 </head>
 <body>
 <div id="heading">
