oh my holy bootstrap
still no navbar though :c

--- a/controlpanel.html
+++ b/controlpanel.html
@@ -34,18 +34,18 @@
 <h3 class="margincancel">User Settings</h3>
 <form action="/name">
 	<input type="text" placeholder="Nickname">
-	<button type="button" class="btn btn-primary">Submit</button>
+	<button type="button" class="btn btn-primary"><i class="fa fa-paper-plane"></i>Submit</button>
 </form>
 <form action="/pw">
 	<input type="password" placeholder="Password">
-	<button type="button" class="btn btn-primary">Submit</button>
+	<button type="button" class="btn btn-primary"><i class="fa fa-paper-plane"></i>Submit</button>
 </form>
 <form action="/email">
 	<input type="email" placeholder="Email">
-	<button type="button" class="btn btn-primary">Submit</button>
+	<button type="button" class="btn btn-primary"><i class="fa fa-paper-plane"></i>Submit</button>
 </form>
 <form action="/phone">
 	<input type="tel" placeholder="Phone Number">
-	<button type="button" class="btn btn-primary">Submit</button>
+	<button type="button" class="btn btn-primary"><i class="fa fa-paper-plane"></i>Submit</button>
 </form>
 </div>
