--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
 <head>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-	<link rel="stylesheet" type="text/css" name="style" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<script src="jquery-1.11.3.min.js"></script>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70789067-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+	<title>Index</title>
 </head>
 <body>
 <div id="heading">
