--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML SYSTEM>
 <html>
 <head>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -14,6 +15,8 @@
 
 </script>
 	<title>Index</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="noot noot">
 </head>
 <body>
 <div id="heading">
@@ -53,11 +56,11 @@
 </font>
 </div>
 <div id="column2" style="float:left; margin:0; width:60%; solid#000;">
-<div align="middle"><span id="newstitle">CLICKBAIT ARTICLE NAME</span>
+<div align="center"><span id="newstitle">CLICKBAIT ARTICLE NAME</span>
 <img src="news.png" alt="News Logo" style="width:100;height:81px;" padding-top:20px>
 </div>
 <div id="newsarticle">
-<video width="320" height="240" controls>
+<video width="320" height="240">
 	<source src="newest dog source.mp4" type="video/mp4">
 Your browser does not support the video tag. Upgrade to HTML5!
 </video>
