--- a/overview.html
+++ b/overview.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML SYSTEM>
 <html>
 <head>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -13,6 +14,9 @@
   ga('send', 'pageview');
 
 </script>
+	<title>Education</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="noot noot">
 </head>
 <body>
 <div id="heading">
