--- a/trashsystem.html
+++ b/trashsystem.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML SYSTEM>
 <html>
 <head>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -14,6 +15,8 @@
 
 </script>
 	<title>Trash System</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="noot noot">
 </head>
 <body>
 <div id="heading">
