--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<meta name="description" content="noot noot">
 </head>
 <body>
+<div class="container-fluid">
 <div id="heading">
 <img class="logo" src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
 <h1>Green Bananas</h1>
@@ -35,24 +36,23 @@
 </div>
 
 <div id="column1" style="float:left; margin:0; width:20%;">
-<font color="#b8860b">
-<h3>EVENTS</h3>
-<h4>TITLE</h4>
-<p>Imagine some actual text goes here about the event.</p>
-<p>Now imagine here's a date and a city.</p>
-<p>And here's a read more button.</p>
+<h3 style="color: #b8860b;">EVENTS</h3>
+<h4 style="color: #b8860b;">TITLE</h4>
+<p style="color: #b8860b;">Imagine some actual text goes here about the event.</p>
+<p style="color: #b8860b;">Now imagine here's a date and a city.</p>
+<p style="color: #b8860b;">And here's a read more button.</p>
 <hr>
-<h3>#1</h3>
-<h4>blahblah</h4>
-<p>blahblahblahblahblahblahblahblahblahbla</p>
-<p>blahblahblahblahblahblahblahblahblah</p>
-<p>blahblahblahblahblahblahblah</p>
+<h3 style="color: #b8860b;">#1</h3>
+<h4 style="color: #b8860b;">blahblah</h4>
+<p style="color: #b8860b;">blahblahblahblahblahblahblahblahblahbla</p>
+<p style="color: #b8860b;">blahblahblahblahblahblahblahblahblah</p>
+<p style="color: #b8860b;">blahblahblahblahblahblahblah</p>
 <hr>
-<h3>#2</h3>
-<h4>blahblah</h4>
-<p>blahblahblahblahblahblahblahblahblahbla</p>
-<p>blahblahblahblahblahblahblahblahblah</p>
-<p>blahblahblahblahblahblahblah</p>
+<h3 style="color: #b8860b;">#2</h3>
+<h4 style="color: #b8860b;">blahblah</h4>
+<p style="color: #b8860b;">blahblahblahblahblahblahblahblahblahbla</p>
+<p style="color: #b8860b;">blahblahblahblahblahblahblahblahblah</p>
+<p style="color: #b8860b;">blahblahblahblahblahblahblah</p>
 </font>
 </div>
 <div id="column2" style="float:left; margin:0; width:60%; solid#000;">
@@ -60,7 +60,7 @@
 <img src="news.png" alt="News Logo" style="width:100;height:81px;" padding-top:20px>
 </div>
 <div id="newsarticle">
-<video width="320" height="240">
+<video width="320" height="240" controls>
 	<source src="newest dog source.mp4" type="video/mp4">
 Your browser does not support the video tag. Upgrade to HTML5!
 </video>
@@ -79,6 +79,7 @@ Rotten Tomatoes: Critics: 8/10 "Well-directed, although the plotlines are little
 <p>ADSADS</p>
 <p>ADSADS</p>
 <p>ADSADS</p>
+</div>
 </div>
 </body>
 </html>
