--- a/controlpanel.html
+++ b/controlpanel.html
@@ -24,6 +24,7 @@
 </style>
 </head>
 <body>
+<div class="container-fluid">
 <div id="heading">
 <img class="logo" src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
 <h1>Green Bananas</h1>
@@ -62,4 +63,5 @@
 	<input type="tel" placeholder="Phone Number">
 	<button type="button" class="btn btn-primary"><i class="fa fa-paper-plane"></i>Submit</button>
 </form>
+</div>
 </div>
