--- a/overview.html
+++ b/overview.html
@@ -19,6 +19,7 @@
 	<meta name="description" content="noot noot">
 </head>
 <body>
+<div class="container-fluid">
 <div id="heading">
 <img class="logo" src="download.png" alt="Exactly what it seems like, a banana." style="width:384px;height:256px;">
 <h1>Green Bananas</h1>
@@ -82,3 +83,5 @@ An in-depth guide to what to recycle versus what to not.
 <p>What kinds of compost you can/should use and what kinds you should just dispose of.</p>
 <a href="brother.html">Other</a>
 <p>Any other kinds of trash. If you need help with one not included, just ask.</p>
+
+</div>
