--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
 <img src="news.png" alt="News Logo" style="width:100;height:81px;" padding-top:20px>
 </div>
 <div id="newsarticle">
-<video width="320" height="240" controls>
-	<source src="newest dog source.mp4" type="video/mp4">
-Your browser does not support the video tag. Upgrade to HTML5!
-</video>
-
-<p>The famous thriller of 2015, "Chronicles of the Dog" was a widespread movie with a crazed fanatic base behind it.
-It talks about one of the most serious topics in the world, barking; while also subtly adding in the tragedy of a dog unable to contact with humanity.
-Join the "Chronicles of the Dog"; as "dog source" ventures on his journey to find his meaning, his strength, and his passion in life.
-IMDb: 11/10 "what even is this movie?" "Heart-breaking and a true classic."
-Rotten Tomatoes: Critics: 8/10 "Well-directed, although the plotlines are little bit too drawn out." Audience: 9/10 "A thrilling drama about a dog's life in today."
+<img src="http://gia.info.gov.hk/general/201510/27/P201510270727_photo_1091910.jpg" alt="lindsay" height="600" width="399.75">
+<p>The Environmental Protection Departmet launched a new program called: "Clink, Drink then Recycle" as of October 2015.
+"Clink, Drink then Recycle" is a glass bottle recycling program that is being staged at major shopping malls and commercial buildings on Hong Kong Island.
+The idea is to encourage restaurants and food stands at these malls to join glass bottle recycling.
+These commercial buildings and malls will help the restaurants and food stands in sorting their glass bottles and storing them centrally.
+Enviromental Protection Department's Contractor will deliver the gathered glass bottles to local recyclers that turn the bottles into glass sand for the making of construction maerials.
+Now everyone can support glass recycling when eating out!
 </p>
 </div>
 </div>
