--- a/controlpanel.htm
+++ b/controlpanel.htm
@@ -30,14 +30,14 @@
 <h1>Green Bananas</h1>
 </div>
 <div id="hotbar">
-<a href="index.html">
+<a href="index.htm">
 	<img src="homeimg.png" style="width:42px;height:42px;border:0px">
 </a>
-<a href="index.html" style="padding: .5cm">Homepage</a>
-<a href="overview.html" style="padding: .5cm">Education</a>
-<a href="ratings.html" style="padding: .5cm">Ratings</a>
-<a href="about.html" style="padding: .5cm">About</a>
-<a href="controlpanel.html" style="padding: .5cm">Control Panel</a>
+<a href="index.htm" style="padding: .5cm">Homepage</a>
+<a href="overview.htm" style="padding: .5cm">Education</a>
+<a href="ratings.htm" style="padding: .5cm">Ratings</a>
+<a href="about.htm" style="padding: .5cm">About</a>
+<a href="controlpanel.htm" style="padding: .5cm">Control Panel</a>
 </div>
 
 <div id="dashboard">
