--- a/index.htm
+++ b/index.htm
@@ -25,14 +25,14 @@
 <h1>Green Bananas</h1>
 </div>
 <div id="hotbar">
-<a href="index.html">
+<a href="index.htm">
 	<img src="homeimg.png" style="width:42px;height:42px;border:0px">
 </a>
-<a href="index.html" style="padding: .5cm">Homepage</a>
-<a href="overview.html" style="padding: .5cm">Education</a>
-<a href="ratings.html" style="padding: .5cm">Ratings</a>
-<a href="about.html" style="padding: .5cm">About</a>
-<a href="controlpanel.html" style="padding: .5cm">Control Panel</a>
+<a href="index.htm" style="padding: .5cm">Homepage</a>
+<a href="overview.htm" style="padding: .5cm">Education</a>
+<a href="ratings.htm" style="padding: .5cm">Ratings</a>
+<a href="about.htm" style="padding: .5cm">About</a>
+<a href="controlpanel.htm" style="padding: .5cm">Control Panel</a>
 </div>
 
 <div id="column1" style="float:left; margin:0; width:20%;">
@@ -60,7 +60,7 @@
 <img src="news.png" alt="News Logo" style="width:100;height:81px;" padding-top:20px>
 </div>
 <div id="newsarticle">
-<img src="http://gia.info.gov.hk/general/201510/27/P201510270727_photo_1091910.jpg" alt="lindsay" height="600" width="399.75">
+<img src="http://gia.info.gov.hk/general/201510/27/P201510270727_photo_1091910.jpg" alt="lindsay" height="399.75" width="600">
 <p>The Environmental Protection Departmet launched a new program called: "Clink, Drink then Recycle" as of October 2015.
 "Clink, Drink then Recycle" is a glass bottle recycling program that is being staged at major shopping malls and commercial buildings on Hong Kong Island.
 The idea is to encourage restaurants and food stands at these malls to join glass bottle recycling.
