--- a/about.htm
+++ b/about.htm
@@ -34,15 +34,32 @@
 </div>
 <div id="aboutmain">
 <h3>
+Our Goal
+</h3>
+<p>
+	Our goal is to educate the world about correctly dealing with trash. We hope to make the world a better, greener place by helping people
+deal with their waste in the way that is best for the environment, in order to make a better world for future generations.
+</p>
+<h3>
 About us, the Banana Bot Builders
 </h3>
 <p>
 	We are the Banana Bot Builders, a FLL team. For this year we are doing the challenge: Trash Trek. We talked to Waste Management officer
-	Paul Burns. He said that the biggest problem was educating people to recycle, compost, etc. correctly.
+Paul Burns. He said that the biggest problem was educating people to recycle, compost, etc. correctly. So we created this website.
 </p>
-<h4>Social Media!</h5>
-<p>Coder</p>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<div class="g-person" data-href="https://plus.google.com/113142564444286511176"></div>
-
+<h3>
+FLL
+</h3>
+<p>
+	FLL is an international 'lego league' a competition based on lego robotics and a project that varies from year to year. This year the
+challenge is 'Trash Trek.' This means we have to solve a problem about trash. As you can see above, we decided to solve the prooblem of educating
+people about what to do with what waste.
+</p>
+<a href="http://www.firstlegoleague.org">
+<h4>The FLL Website</h3>
+</a>
+<hr>
+<p>
+	Thank you for trying to be as green as possible! Good luck recycling!
+</p>
 </div>
