--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 </font>
 </div>
 <div id="column2" style="float:left; margin:0; width:60%; solid#000;">
-<div align="center"><span id="newstitle">CLICKBAIT ARTICLE NAME</span>
+<div align="center"><span id="newstitle">Clink, Drink, then Recycle</span>
 <img src="news.png" alt="News Logo" style="width:100;height:81px;" padding-top:20px>
 </div>
 <div id="newsarticle">
@@ -70,12 +70,10 @@ Now everyone can support glass recycling when eating out!
 </p>
 </div>
 </div>
-<div id="column3" style="float:left; margin:0; width:15%; solid#000; background-color: white;">
-<p>ADSADS</p>
-<p>ADSADS</p>
-<p>ADSADS</p>
-<p>ADSADS</p>
-<p>ADSADS</p>
+<div id="column3" style="float:left; margin:0; padding:0; width:20%; solid#000; background-color: white;">
+<a href="http://pangeamotors.com/">
+	<img src="get_ready_future_260px.png" alt="Pangea Motors">
+</a>
 </div>
 </div>
 </body>
